--- a/app/views/coord_plani/evaluacion/editar.html
+++ b/app/views/coord_plani/evaluacion/editar.html
@@ -15,9 +15,9 @@
 
 	<%- include('../../partials/coord_plani/navbar.html') %>
 
-	<div class="container-fluid">
+	<div class="container-fluid" id="main">
 		<div class="row justify-content-md-center">
-			<div class="col-md-10">
+			<div class="col-md-12">
 				<div class="row">
 					<div class="col-md-12">
 						<!--=======MIGAS DE PAN=========-->
@@ -98,22 +98,21 @@
 												%>
 
 												<% if(Evaluacion.fecha_i > hoy) {%>
-													<form method="POST" action="">
+													<form method="POST" action="/coord_plani/editEval/<%- Evaluacion.id %>">
 							                        	<div class="modal-body">
 							                          		<div class="form-row">
 							                          			<div class="form-group col-md-6">
 							                          				<label>Nucleo: </label>
-							                          				<select name="nucleo" class="form-control">
-							                          					<option value="<%- Evaluacion.nucleoId %>"><%- Evaluacion.nucleo.nombre %></option>
-							                          					<% for(let i = 0; i < Nucleos.length; i ++) {%>
-																			<option value="<%- Nucleos[i].id %>"><%- Nucleos[i].nombre %></option>
-							                          					<%}%>
+							                          				<select v-model="evaluacion.nucleoCodigo" name="nucleo" class="form-control" @change="getUnidades(evaluacion.nucleoCodigo)">
+							                          					<option v-for="option in nucleos" v-bind:value="option.codigo">{{ option.nombre }}</option>
 							                          				</select>
 							                          			</div>
 
 							                          			<div class="form-group col-md-6">
 							                          				<label>Unidad: </label>
-							                          				<input type="text" name="unidad" class="form-control">
+							                          				<select v-model="evaluacion.unidadCodigo" name="unidad" class="form-control">
+							                          					<option v-for="option in unidades" v-bind:value="option.codigo">{{ option.nombre }}</option>
+							                          				</select>
 							                          			</div>
 							                          		</div>
 
@@ -194,6 +193,54 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.validate.min.js"></script>
-	<script src="/js/main.js"></script>
+	
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+	<script type="text/javascript">
+		new Vue({
+			el:'#main',
+			data: {
+				evaluacion: {},
+				nucleos: [],
+				unidades: []
+			},
+			created() {
+				var currentUrl = window.location.pathname.split('/');
+				var id = currentUrl[3];
+
+				this.getEvaluacion(id);
+				this.getNucleos();
+			},
+			methods: {
+				getEvaluacion(id) {
+					axios.get('/getEvaluacion/'+id)
+						.then(res => {
+							this.evaluacion = res.data;
+							this.getUnidades(this.evaluacion.nucleoCodigo);
+						}).catch(err => {
+							console.log();
+						});
+				},
+				getNucleos() {
+					axios.get('/getNucleos')
+						.then(res => {
+							this.nucleos = res.data;
+							//console.log(this.nucleos);
+						}).catch(err => {
+							console.log(err);
+						});
+				},
+				getUnidades(nucleoCodigo) {
+					axios.get('/getUnidades/'+nucleoCodigo)
+						.then(res => {
+							this.unidades = res.data;
+							//console.log(this.unidades);
+						}).catch(err => {
+							console.log(err);
+						});
+				}
+			}
+		})
+	</script>
 </body>
 </html>
