Ordenando rutas (Incompleto)

--- a/app/views/coord_ev/index.html
+++ b/app/views/coord_ev/index.html
@@ -78,13 +78,15 @@
 												   		<i class="fa fa-bullhorn fa-5x"></i>
 													</div>
 													<div class="col-md-9 text-right">
-													   	<div><h2>5</h2></div>
+													   	<div><h2>
+													   		<%- Eventos.length %>		
+													   	</h2></div>
 		                                    			<div><p style="font-size: 15pt">Eventos</p></div>
 													</div>	
 												</div>
 												    	
 											</div>
-											<a href="/coord_ev/getEventos">
+											<a href="/coord_ev/eventos">
 												<div class="card-footer text-muted">
 				    								2 days ago
 				  								</div>
