--- a/app/views/coord_ev/eventos/index.html
+++ b/app/views/coord_ev/eventos/index.html
@@ -114,7 +114,15 @@
 														<%- Eventos[i].fecha.getDate() %>/<%- Eventos[i].fecha.getMonth() + 1%>/<%- Eventos[i].fecha.getFullYear() %>
 													</td>
 													<td>
-														<a href="javascript:;"><img src="../../../../uploads/eventos/<%=Eventos[i].files%>" class="img-thumbnail" style="width: 30%"/></a>
+														<a href="javascript:;" v-on:click="buscaEvento(<%- Eventos[i].id %>)"><img src="../../../../uploads/eventos/<%=Eventos[i].files%>" class="img-thumbnail" style="width: 30%" data-toggle="modal" data-target="#exampleModalCenter"/></a>
+
+														<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+														  <div class="modal-dialog modal-lg modal-dialog-centered">
+														    <div class="modal-content">
+														      <img v-bind:src="'../../../../uploads/eventos/' + evento.files" class="img-thumbnail"/>
+														    </div>
+														  </div>
+														</div>
 													</td>
 													<td>
 														<a href="/coord_ev/editEvento/<%- Eventos[i].id %>" class="btn btn-warning btn-xs">Edit</a>
@@ -145,6 +153,29 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.validate.min.js"></script>
-	<script src="/js/main.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+	<script type="text/javascript">
+		new Vue({
+			el: '#main',
+			data: {
+				evento: {}
+			},
+			created() {
+				
+			},
+			methods: {
+				buscaEvento(id) {
+					axios.get('/buscaEvento/'+id)
+						.then(res => {
+							this.evento = res.data;
+							console.log(this.evento);
+						}).catch(err => {
+							console.log(err);
+						})
+				}
+			}
+		})
+	</script>
 </body>
 </html>
