--- a/app/views/coord_plani/evaluacion/planificar.html
+++ b/app/views/coord_plani/evaluacion/planificar.html
@@ -74,7 +74,7 @@
 
 									<div class="card-body">
 										<fieldset v-bind:disabled="deshabilitar">
-											<form v-on:submit="checkForm" method="post" action="/coord_plani/plani_eval">
+											<form v-on:submit="checkForm()" method="post" action="/coord_plani/plani_eval">
 												<div class="form-row">
 													<div class="form-group col-md-6">
 														<label>Personal a Evaluar:</label>
@@ -227,11 +227,11 @@
 
 			    	if(fechaActual.getTime() > fechaInicio.getTime()) {
 			      		alert("La Fecha de Inicio No puede ser Menor a la Fecha Actual");
-			      		event.preventDefault();
+			      		return false;
 			      	} else if(fechaInicio.getTime() >= fechaActual.getTime()){
 			      		if((fechaFinal.getTime() <= fechaActual.getTime()) || (fechaFinal.getTime() <= fechaInicio.getTime())) {
 			      			alert("La Fecha Final No puede ser Menor a la Fecha Actual o a la Fecha de Inicio");
-			      			event.preventDefault();
+			      			return false;
 			      		} else {
 			      			console.log("Exito, Evaluacion Planificada");
 			      			return true;
