--- a/app/views/empleado/evaluacion/examen/prueba.html
+++ b/app/views/empleado/evaluacion/examen/prueba.html
@@ -5,6 +5,7 @@
 		<title>CREDIUDO | Dashboard</title>
 
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!--Barra de Progreso-->
 		<script type="text/javascript" src="/js/pace.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
@@ -45,41 +46,47 @@
 							<!--=======FIN MIGAS DE PAN=========-->
 						</div>
 
-						<div class="col-md-3">
-							<div class="card">
-							  	<div class="card-header">
-							    	Sesión:
-							  	</div>
-							  
-							  	<div class="card-body">
-							    	<div class="form-group">
-							    		<p><b>Nombre: </b><%= Evaluador.nombre %></p>
-							    		<p><b>Apellido: </b><%= Evaluador.apellido %></p>
-							    		<p><b>Nucleo: </b><%= Evaluador.nucleo.nombre %></p>
-							    		<p><b>Unidad: </b><%= Evaluador.unidad.nombre %></p>
-							    	</div>
-							  	</div>
-							</div>
+						<div class="col-sm-12 col-md-12 col-lg-3">
+							<div class="row">
+								<div class="col-sm-12 col-md-6 col-lg-12">
+									<div class="card">
+									  	<div class="card-header">
+									    	Sesión:
+									  	</div>
+									  
+									  	<div class="card-body">
+									    	<div class="form-group">
+									    		<p><b>Nombre: </b><%= Evaluador.nombre %></p>
+									    		<p><b>Apellido: </b><%= Evaluador.apellido %></p>
+									    		<p><b>Nucleo: </b><%= Evaluador.nucleo.nombre %></p>
+									    		<p><b>Unidad: </b><%= Evaluador.unidad.nombre %></p>
+									    	</div>
+									  	</div>
+									</div>
+									<br>
+								</div>
 
+								<div class="col-sm-12 col-md-6 col-lg-12">
+									<div class="card">
+									  	<div class="card-header">
+									    	Estas Evaluando a:
+									  	</div>
+									  
+									  	<div class="card-body">
+									    	<div class="form-group">
+									    		<p><b>Nombre: </b><%- Evaluado.nombre %></p>
+									    		<p><b>Apellido: </b><%- Evaluado.apellido %></p>
+									    		<p><b>Nucleo: </b><%- Evaluado.nucleo.nombre %></p>
+									    		<p><b>Unidad: </b><%- Evaluado.unidad.nombre %></p>
+									    	</div>
+									  	</div>
+									</div>
+								</div>
+							</div>
 							<br>
-
-							<div class="card">
-							  	<div class="card-header">
-							    	Estas Evaluando a:
-							  	</div>
-							  
-							  	<div class="card-body">
-							    	<div class="form-group">
-							    		<p><b>Nombre: </b><%- Evaluado.nombre %></p>
-							    		<p><b>Apellido: </b><%- Evaluado.apellido %></p>
-							    		<p><b>Nucleo: </b><%- Evaluado.nucleo.nombre %></p>
-							    		<p><b>Unidad: </b><%- Evaluado.unidad.nombre %></p>
-							    	</div>
-							  	</div>
-							</div>
 						</div>
 
-						<div class="col-md-9">
+						<div class="col-sm-12 col-md-12 col-lg-9">
 							<form method="post" action="" id="formEvaluacion">
 								<input type="hidden" name="factores" value=<%- Factor.length %>>
 								<input type="hidden" name="items" value=<%- Item.length %>>
@@ -108,19 +115,19 @@
 												<tr>
 											    	<td width="5%"></td>
 											    	<td><%=Item[j].nombre%></td> 
-											    	<td>
+											    	<td class="text-center">
 											    		<input type="radio" name="item[<%= j %>]" value=2 id="item" required>
 											    	</td>
-											    	<td>
+											    	<td class="text-center">
 											    		<input type="radio" name="item[<%= j %>]" value=4 id="item" required>
 											    	</td>
-											    	<td>
+											    	<td class="text-center">
 											    		<input type="radio" name="item[<%= j %>]" value=6 id="item" required>
 											    	</td>
-											    	<td>
+											    	<td class="text-center">
 											    		<input type="radio" name="item[<%= j %>]" value=8 id="item" required>
 											    	</td>
-											    	<td>
+											    	<td class="text-center">
 											    		<input type="radio" name="item[<%= j %>]" value=10 id="item" required>
 											    	</td>
 											  	</tr>
@@ -148,7 +155,7 @@
 
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
 		<script src="/js/jquery.validate.min.js"></script>
 		<script src="/js/main.js"></script>
 	</body>
