--- a/app/views/empleado/index.html
+++ b/app/views/empleado/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CREDIUDO | Inicio</title>
+	<link rel="shortcut icon" href="/images/title/favicon-96x96.png">
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
