Calculando calificacion por factores (en construccion)

--- a/app/views/empleado/resultados/todos.html
+++ b/app/views/empleado/resultados/todos.html
@@ -109,6 +109,8 @@
 												</tr>
 											<%}%>
 										</table>
+									<%} else {%>
+										Aun no ha Sido Calificado
 									<%}%>
 								</div>
 							</div>
