--- a/app/views/empleado/resultados/uno.html
+++ b/app/views/empleado/resultados/uno.html
@@ -99,16 +99,50 @@
 											<th>Calificación</th>
 										</thead>
 										<tbody>
+											<% let autoEval = [] %> <!--arreglo que almacena los ptos parciales de los factores en la autoEval-->
+											<% let acumuladorCoEval = [] %> 
+											<% let jefe = [] %> <!-- arreglo que almacena los ptos parciales de los factores en la eval q hace el jefe -->
+											<% let califiParcial = [] %> <!-- arreglo q guarda la calificacion parcial de un factor (autoE+coE+jefe) -->
+											<% let n = [] %> <!-- arreglo q almacena el numero de veces q entro en un cliclo (la pude haber definido como 3 y ya) -->
+											<% califiCoEval = [] %> <!-- arreglo que almacena los ptos parciales de los factores en la coEval -->
+
+
 											<% for(let i = 0; i < Factores.length; i ++) {%>
-												<tr>
-													<td><%- Factores[i].factor.nombre %></td>
-													<td style="padding: 5px">
-														<div class="progress">
-														  	<div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b>8	 Ptos</b></div>
-														</div>
-													</td>
-												</tr>
+												<% if(calificacionFactor && calificacionFactor.length > 0) {%>
+													<% autoEval[i] = 0 %>
+													<% acumuladorCoEval[i] = 0 %>
+													<% jefe[i] = 0 %>
+													<% califiCoEval[i] = 0 %>
+													<% califiParcial[i] = 0 %>
+													<% n[i] = 0 %>
+												</tbody>
+													<tr>
+														<td><%- Factores[i].factor.nombre %></td>
+														<td style="padding: 5px">
+															<% for(let j = 0; j < calificacionFactor.length; j ++) {%>
+																<% if(calificacionFactor[j].factorId == Factores[i].factorId) {%>
+																	<% if(calificacionFactor[j].evaluacion.instrumentId == 1) {%>
+																		<% autoEval[i] = (calificacionFactor[j].calificacion * 2) / 10 %>
+																		
+																	<%} else if(calificacionFactor[j].evaluacion.instrumentId == 2) {%>
+																		<% n[i] = n[i] + 1 %>
+																		<% acumuladorCoEval[i] = acumuladorCoEval[i] + parseFloat(calificacionFactor[j].calificacion) %>	
+																	<%} else if(calificacionFactor[j].evaluacion.instrumentId == 4) {%>
+																		<% jefe[i] = (calificacionFactor[j].calificacion * 3) / 10 %>
+																	<%}%>
+																<%}%>
+															<%}%>
+															<% califiCoEval[i] = (((acumuladorCoEval[i] / n[i]) * 5) / 10) %>
+															<% califiParcial[i] = autoEval[i] + califiCoEval[i] + jefe[i] %>
+															<div class="progress">
+															  	<div class="progress-bar" role="progressbar" style="width: <%= califiParcial[i] * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b><%= (califiParcial[i]).toFixed(2) %> Ptos</b></div>
+															</div>
+														</td>
+													</tr>
+												<%}%>
 											<%}%>
+
+
 										</tbody>
 									</table>
 								</div>
