--- a/app/views/coord_ev/instrumento/verInstrumento.html
+++ b/app/views/coord_ev/instrumento/verInstrumento.html
@@ -346,7 +346,7 @@
 						nombre: item,
 						factorId: factor
 					}).then(res => {
-						console.log('Pregunta Actualizada');
+						console.log(res.data);
 					}).catch(err => {
 						console.log(err);
 					});
