Cambiando pequeños detalles

--- a/app/views/empleado/evaluacion/evaluaciones.html
+++ b/app/views/empleado/evaluacion/evaluaciones.html
@@ -29,7 +29,8 @@
 						<!--=======MIGAS DE PAN=========-->
 						<nav aria-label="breadcrumb" style="margin-top: 1%">
 							<ol class="breadcrumb">
-							    <li class="breadcrumb-item active" aria-current="page">Home</li>
+							    <li class="breadcrumb-item" aria-current="page"><a href="/dashboard">Home</a></li>
+							    <li class="breadcrumb-item active" aria-current="page">Evaluación</li>
 							</ol>
 						</nav>
 						<!--=======FIN MIGAS DE PAN=========-->				
@@ -287,15 +288,14 @@
 		</div>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="/js/jquery-3.3.1.min.js"></script>
+	<script src="/js/popper.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.validate.min.js"></script>
 	<script src="/js/main.js"></script>
 	<script src="/js/misFunciones.js"></script>
-
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+	<script src="/js/vue.js"></script>
+	<script src="/js/axios.js"></script>
 	<script type="text/javascript">
 		new Vue({
 			el: '#main',
