--- a/app/views/empleado/evaluacion/examen/prueba.html
+++ b/app/views/empleado/evaluacion/examen/prueba.html
@@ -41,6 +41,7 @@
 								<ol class="breadcrumb">
 								    <li class="breadcrumb-item" aria-current="page"><a href="/dashboard">Home</a></li>
 								    <li class="breadcrumb-item" aria-current="page"><a href="">Evaluación</a></li>
+								    <li class="breadcrumb-item" aria-current="page">Examen</li>
 								</ol>
 							</nav>
 							<!--=======FIN MIGAS DE PAN=========-->
@@ -153,8 +154,8 @@
 			</div>
 		</footer>
 
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="/js/jquery-3.3.1.min.js"></script>
+		<script src="/js/popper.min.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
 		<script src="/js/jquery.validate.min.js"></script>
 		<script src="/js/main.js"></script>
